# Triangular-Arbitrage

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-actions.yml
Kucoin/: build_binaries.sh  execute_trades.py  find_triangular_arbitrage.py  requirements.txt
Kucoin-Python/: execute_trades.py
Kucoin-Rust/: Cargo.toml
Kucoin-Rust/src/: .lib.rs  kucoin_interface.rs  kucoin_websocket.rs  lib.rs  main.rs  main_main.rs
Kucoin-Rust/src/kucoin_websocket/: lib.rs
Kucoin/Rust/: Cargo.toml
Kucoin/Rust/src/: main.rs
Orderbook/: Triangular_pairs.catalog  build_binaries.sh  chainable_pair_catalog.py  create_pair_catalog.py  create_valid_pairs_catalog.py  create_valid_pairs_catalogV2.py  execute_trades.py  find_triangular_arbitrage.py  path_finder_algo.py  requirements.txt  websocket_spawner.py  websockets.py
runtime/: coinfees.json
src/: func.rs  interface.rs  kucoin_interface.rs  lib.rs  main.rs  tests.rs  websocket.rs
src/kucoin/: interface.rs  mod.rs  websocket.rs
src/test_files/: exchange_information.json  trading_fees.json
