[package]
name = "arbitrage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
binance-rs-async = { git = "https://github.com/LegitCamper/binance-rs-async.git", branch = "master" }
simple_logger = "4.2.0"
log = "0.4"
tokio-tungstenite = "0.20.0"
rand = "0.8.5"
itertools = "0.12.0"
rayon = "1.8.0"
