[package]
name = "arbitrage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
binance-rs-async = { git = "https://github.com/LegitCamper/binance-rs-async.git", branch = "master", features = [
  "wallet_api",
] }
simple_logger = "4.2.0"
log = "0.4"
tokio-tungstenite = "0.20.0"
rand = "0.8.5"
itertools = "0.12.0"
chrono = "0.4.31"
lazy_static = "1.4.0"
rust_decimal = { version = "1.34.3", features = ["maths"] }
rust_decimal_macros = "1.34.2"

tokio-test = "0.4"
