[package]
name = "kucoin-arbitrage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["json"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
url = "2.3.1"
#json = "0.12.4"
serde_json = "1.0.93"
serde-this-or-that = "0.4"
libc = "0.2.139"
rand = "0.8.5"
futures = "0.3.26"
duration-string = "0.2.0"
base64 = "0.21.0"
hmac = "0.12.1"
hex-literal = "0.3.4"
sha2 = "0.10.6"
itertools = "0.8.0"
native-tls = "0.2"
