[package]
name = "kucoin-arbitrage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["json"] }
message-io = { version = "0.15", default-features = false, features = ["websocket"] } # websocket library
#tokio-tungstenite = { version = "*", features = ["native-tls"] }
#tungstenite = "0.18.0"
url = "2.3.1"
#json = "0.12.4"
serde_json = "1.0.93"
serde-this-or-that = "0.4"
libc = "0.2.139"
rand = "0.8.5"
futures = "0.3.26"
duration-string = "0.2.0"
ring = "0.16.20"
data-encoding = "2.3.3"
itertools = "0.8.0"
native-tls = "0.2"
