[package]
name = "kucoin-arbitrage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["json"] }
workflow-websocket = "0.3.14"
workflow-core = "0.3.14"
url = "2.3.1"
serde_json = "1.0.93"
serde-this-or-that = "0.4"
optional-field = "0.1.3"
rand = "0.8.5"
futures = "0.3.26"
duration-string = "0.2.0"
ring = "0.16.20"
data-encoding = "2.3.3"
native-tls = "0.2"
